Fixed image layout issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,7 +31,17 @@ code {
     font-size: 140px;
 }
 
-.section-title {
+.image-container {
+    position: relative;
+    height: 100%;
+}
+
+.image-container img {
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
 }
 
 .clickable-icon {
